<resources>
    <string name="app_name">CustomApplication</string>
    <string name="sample_value">50</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="trade_type">Trade Type</string>
    <string name="bought">Bought</string>
    <string name="sold">Sold</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="_3_months">3 Months</string>
    <string name="_6_months">6 Months</string>
    <string name="_1_year">1 Year</string>
    <string name="reset">RESET</string>
    <string name="apply">APPLY</string>
    <string name="next">Next</string>
    <string name="close">Close</string>

    <string name="anim_first">First we showcase this…</string>
    <string name="anim_second">Then this…</string>
    <string name="anim_third">Then this…</string>
    <string name="title_animations">Animations</string>
</resources>
